--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "eslint .",
-    "start": "node server.js"
+    "test": "mocha",
+    "linterTest": "eslint *.js lib/*.js test/*.js public/js/*.js",
+    "coverage": "nyc npm test",
+    "start": "node server.js",
+    "alltests": "npm run cover && npm run linterTest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,7 @@
   "homepage": "https://github.com/step-batch-7/flower-catalog-dad-ka-raneesa#readme",
   "devDependencies": {
     "eslint": "^6.8.0",
+    "mocha": "^7.0.1",
     "supertest": "^4.0.2"
   }
 }
