--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint": "^6.8.0",
     "mocha": "^7.0.1",
     "supertest": "^4.0.2"
+  },
+  "dependencies": {
+    "sinon": "^8.1.1"
   }
 }
