Overrided the eslint rule no-process-env for config.js file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -87,6 +87,12 @@
         "max-statements": "off",
         "no-unused-vars": "off"
       }
+    },
+    {
+      "files": ["config.js"],
+      "rules": {
+        "no-process-env": "off"
+      }
     }
   ]
 }
